# mistral-api-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  completion.rs  lib.rs
tests/: test_completions.rs
