[package]
name = "mistral-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0.11.23", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
thiserror = "~1.0"
url = "2.5.0"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.35.1", features = ["rt", "macros"] }